--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,10 @@ dependencies:
   dio: ^5.4.3+1
   pretty_dio_logger: ^1.3.1
   hexcolor: ^3.0.1
+  font_awesome_flutter: ^10.7.0
+  loading_indicator: ^3.1.1
   flutter_debouncer: ^2.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
