--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   dio: ^5.4.3+1
+  shared_preferences: ^2.2.3
   pretty_dio_logger: ^1.3.1
   hexcolor: ^3.0.1
   font_awesome_flutter: ^10.7.0
   loading_indicator: ^3.1.1
+  dropdown_button2: ^2.3.9
   flutter_debouncer: ^2.0.0
+  cached_network_image: ^3.3.1
   intl: ^0.19.0
 
 dev_dependencies:
