--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   loading_indicator: ^3.1.1
   dropdown_button2: ^2.3.9
+  currency_formatter: ^2.2.1
   flutter_debouncer: ^2.0.0
   cached_network_image: ^3.3.1
   intl: ^0.19.0
