--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/finder.jpeg
+    - assets/images/finder.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -96,6 +99,21 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
+  fonts:
+    - family: Sarabun
+      fonts:
+        - asset: assets/fonts/sarabun/Sarabun-Regular.ttf
+        - asset: assets/fonts/sarabun/Sarabun-Italic.ttf
+          style: italic
+        - asset: assets/fonts/sarabun/Sarabun-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/sarabun/Sarabun-BoldItalic.ttf
+          style: italic
+          weight: 700
+        - asset: assets/fonts/sarabun/Sarabun-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/sarabun/Sarabun-ThinItalic.ttf
+          style: italic
+          weight: 100
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
